# elson.ai

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  Package.resolved  Package.swift  README.md  build.sh  elson-compat15-latest.dmg  elson-modern-latest.dmg  github-install.sh  install.sh  rebuild.sh  update.sh
.github/workflows/: pages.yml
Config/: local-config.example.json
Elson/: ElsonApp.swift
Elson Universal Installer/: README.txt  install.sh
Elson/App/: ElsonWindowCoordinator.swift
Elson/DesignSystem/: ElsonGlass.swift
Elson/Models/: APIProvider.swift  AppSettings.swift  ChatStore.swift  ConversationHistory.swift  FeedbackLog.swift  LastOutputSnapshot.swift  ModelConfig.swift  PromptConfig.swift  RegisteredSkill.swift  ThreadAttachment.swift  TranscriptHistory.swift
Elson/Resources/: AppIcon.icns  Info.plist  model-config.json  prompt-config.json
Elson/Runtime/: AudioSpeechDetector.swift  DesktopActionExecutor.swift  ElsonLocalConfig.swift  ElsonPromptCatalog.swift  ElsonRuntime.swift  EmbeddedAgentTransport.swift  GroqTranscriptionSanitizer.swift  IntentEvalFixtureStore.swift  LocalAIService.swift  MyElsonMemory.swift  (+6 more)
distribution/: Install Elson.command  README.txt  Update Elson.command
docs/: CNAME  index.html  styles.css
evals_python/: README.md  pyproject.toml
evals_python/fixtures/local-agent/: README.md  local_agent_cases.csv
evals_python/scripts/: generate_shortcut_reply_synthetic_fixtures.py
evals_python/src/elson_intent_evals/: cli.py  config.py  constants.py  fixtures.py  models.py  prompt_config.py  providers.py  reporting.py
(+63 files in other folders)
