[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "elson-intent-evals"
version = "0.1.0"
description = "Intent Agent eval harness for Elson.ai using direct provider replays."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "httpx>=0.27.0",
  "lighteval>=0.7.0",
]

[project.scripts]
elson-intent-evals = "elson_intent_evals.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
